compiler-data/styles/base.css
html {
  margin: 0;
  height: 100%;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -webkit-text-size-adjust: 100%;
  line-height: 1.5;
  -moz-osx-font-smoothing: grayscale;
  touch-action: manipulation;
}

body {
  margin: 0;
  height: 100%;
  background-size: cover;
  background-color: #1a202c;
  background-blend-mode: multiply;
  background-attachment: fixed;
  font-family: Inter, sans-serif;
  font-size: 16px;
  font-weight: 400;
  color: #edf2f7;
}

.container {
  margin: 0 auto 0 auto;
  padding: 32px 32px;
  text-align: center;
}

p {
  margin: 0 0 0 0;
}

a {
  text-decoration: none;
  font-weight: 700;
  color: #1a9595;
}

a:visited {
  color: #197a7a;
}

a:hover {
  color: #46c8c8;
}

a:active {
  color: #197a7a;
}

.phi {
  background-color: #1a9595;
  border-radius: 8px;
  margin: 32px 0 32px 0;
}

.col {
  display: flex;
  flex-direction: column;
}

.m-t-md {
  margin-top: 16px;
}

.license-container {
  max-width: 800px;
  margin: 0 auto 0 auto;
}

body::-webkit-scrollbar {
  width: 16px;
}

body::-webkit-scrollbar-thumb {
  height: 56px;
  border-radius: 8px;
  border: 4px solid transparent;
  background-color: hsl(0, 0%, 67%);
  background-clip: content-box;
}

